feat: handle generate & verify jwt
